--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 Datasets/*/
-.idea
-*/.idea
-*/__pycache__/*
-*/*/__pycache__/*
-*/.ipynb_checkpoints/*
-*/*/.ipynb_checkpoints/*
-*.h5
-
+**/.idea
+**/__pycache__/*
+**/.ipynb_checkpoints/*
+**.h5
+Metrics/*.ipynb
+!Metrics/template.ipynb
+Metrics/log*
